--- a/appspec.yaml
+++ b/appspec.yaml
@@ -5,6 +5,6 @@ Resources:
       Properties:
         TaskDefinition: "arn:aws:ecs:us-east-1:797335914619:task-definition/codehub-search:20"
         LoadBalancerInfo:
-          ContainerName: "codehub-dev-search"
+          ContainerName: "codehub-search"
           ContainerPort: 9200
         PlatformVersion: "LATEST"
