--- a/appspec.yaml
+++ b/appspec.yaml
@@ -9,4 +9,4 @@ Resources:
           ContainerPort: 9200
         PlatformVersion: "LATEST"
 Hooks:
-  - BeforeAllowTraffic: "bashFunction"
+  - BeforeAllowTraffic: "ProcessNewES"
